index page resolved

--- a/quartz/components/styles/footer.scss
+++ b/quartz/components/styles/footer.scss
@@ -12,4 +12,14 @@ footer {
     gap: 1rem;
     margin-top: -1rem;
   }
+
+  & a {
+    color: var(--darkgray);
+    text-decoration: none;
+    transition: color 0.2s ease;
+    
+    &:hover {
+      color: var(--secondary);
+    }
+  }
 }
